--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <title>Marlev Invest - Panouri de gard</title>
   </head>
   <body>
